--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -48,6 +48,9 @@
 @include meta.load-css('./interfaces/ClockworkSlab.scss');
 @include meta.load-css('./themes/clockwork.scss');
 // NOVA EDIT ADDITION END
+// FLUFFY FRONTIER ADDITION START
+@include meta.load-css('./interfaces/Telephone.scss');
+// FLUFFY FRONTIER ADDITION END
 
 // Layouts
 @include meta.load-css('./layouts/Layout.scss');
